Fix font size on mobile

--- a/css/vars.css
+++ b/css/vars.css
@@ -18,4 +18,10 @@
     --color-gray: rgba(159, 159, 159, 0.9);
     --color-blue: rgb(72,169,233);
     --color-yellow: rgb(232,144,169);
+    
+    /* Prevent font scaling in landscape */
+    -webkit-text-size-adjust: none; /*Chrome, Safari, newer versions of Opera*/
+    -moz-text-size-adjust: none; /*Firefox*/
+    -ms-text-size-adjust: none;  /*IE*/
+    -o-text-size-adjust: none; /*old versions of Opera*/
   }
